# FastFinance

./: .env.example  .gitignore  README.md  buildozer.spec  main.py  pyproject.toml  run.ps1  run.py
.github/workflows/: ci.yml  deploy-pages.yml
docs/: index.html
ocr_tests/: main.py
src/patrimonio/: __init__.py  cli.py  database.py  models.py
src/patrimonio/bot/: __init__.py  service.py
src/patrimonio/mobile/: __init__.py  api_client.py  app.py  async_requests.py  config.py  md_compat.py  screen_state.py
src/patrimonio/mobile/screens/: __init__.py  banks.py  budgets.py  dashboard.py  insights.py  net_worth.py  settings.py  subscriptions.py  transactions.py
src/patrimonio/telegram/: __init__.py  bot.py  ocr.py
src/patrimonio/web/: __init__.py  api.py  app.py  schemas.py
src/patrimonio/web/templates/: bancos.html  base.html  dashboard.html  insights.html  patrimonio.html  presupuestos.html  suscripciones.html  transacciones.html
src/patrimonio/whatsapp/: __init__.py  bot.py
tests/: conftest.py  test_api.py  test_database.py  test_models.py  test_telegram_bot.py  test_telegram_ocr.py
tests/mobile/: test_api_client.py  test_async_requests.py  test_screen_state.py
